# add_custom_command_target_w_subfolders

./: CMakeLists.txt  README.md
generator/: CMakeLists.txt
